# collatz-conjecture-proof

./: .gitignore  CMakeLists.txt  README.md  RESEARCH.md  build.bat  do_build.bat  do_build.ps1  run_build.ps1
include/: config.h
src/: collatz_proof.cu
